# burnintelligence

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  pyproject.toml
assets/: evidence-pack-39018.json
intelligence/: __init__.py  __main__.py  api.py  auth.py  db.py  health.py  locking.py  main.py  metrics.py  retention.py
intelligence/evidence/: generate.py
intelligence/ingestors/: bluesky.py  gdelt.py  retry.py
intelligence/processing/: cluster.py  cross_narrative.py  dna.py  embed.py  gates.py  graph_engine.py  interpret.py  lifecycle.py  nvi.py  retention.py  selftest.py  source_credibility.py
intelligence/validation/: __init__.py  __main__.py  cli.py  evaluate.py  ground_truth_labels.json  regression_baseline.json  schema.json  synthetic_benchmark.py
scripts/: setup.sh
templates/: dashboard.html
