[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "intelligence"
version = "5.2.0"
description = "Narrative coordination detection engine — ingest, cluster, score, gate."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "aiohttp>=3.8",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "hdbscan>=0.8",
    "umap-learn>=0.5",
    "networkx>=3.0",
    "shapely>=2.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24"]

[project.scripts]
intelligence = "intelligence.main:main"

[tool.setuptools.packages.find]
where = ["."]
